refactor: split BookingService into Validator, Manager, PricingService; apply DI with AppContext